# ZeroClaw-Android

./: .editorconfig  .gitignore  README.MD  README.md  agents.md.default  build.gradle.kts
.github/workflows/: ci.yml  release.yml  upstream-sync.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/zeroclaw/android/dao/: ActivityEventDaoTest.kt  AgentDaoTest.kt  LogEntryDaoTest.kt  PluginDaoTest.kt
app/src/androidTest/java/com/zeroclaw/android/screen/: ApiKeysScreenTest.kt  ConnectionsScreenTest.kt  ConsoleScreenTest.kt  DashboardScreenTest.kt  (+5 more)
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zeroclaw/android/: MainActivity.kt  ZeroClawApplication.kt
app/src/main/res/xml/: network_security_config.xml
config/detekt/: detekt.yml
docs/plans/: 2026-02-19-provider-key-management-gaps-design.md  2026-02-20-session-lock-design.md  2026-02-23-automated-test-suite-plan.md
gradle/: libs.versions.toml
lib/: build.gradle.kts
maestro/config/: test-config.toml
maestro/flows/: onboarding.yaml
patches/: 0001-fix-resolve-compile-errors-for-Android-FFI-consumpti.patch  0002-fix-suppress-unused-import-warnings-in-security-modu.patch
scripts/: lint-all.sh  release.sh  test-local-all.sh
zeroclaw-android/: deny.toml
zeroclaw-android/.cargo/: config.toml
zeroclaw-android/zeroclaw-ffi/: Cargo.toml
zeroclaw-android/zeroclaw-ffi/src/: cost.rs  cron.rs  error.rs  estop.rs  events.rs  gateway_client.rs  health.rs  lib.rs  memory_browse.rs  repl.rs  runtime.rs  session.rs  skills.rs  tools_browse.rs  types.rs  vision.rs
(+229 files in other folders)
