[package]
name = "zeroclaw-ffi"
version = "0.0.15"
edition.workspace = true
license.workspace = true
description = "UniFFI-annotated facade for ZeroClaw Android bindings"

[lib]
crate-type = ["cdylib"]
name = "zeroclaw"

[lints]
workspace = true

[dependencies]
uniffi = "0.29"
thiserror = "2.0"
zeroclaw = { path = "../../zeroclaw", default-features = false }
tokio = { version = "1.42", features = ["rt-multi-thread", "sync", "macros"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0"
toml = "0.8"
tracing = "0.1"
chrono = "0.4"
